--- a/ShipIt/ShipIt.csproj
+++ b/ShipIt/ShipIt.csproj
@@ -22,10 +22,15 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Remove=".editorconfig" />
       <None Remove=".env" />
       <Content Include=".env">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <EditorConfigFiles Include=".editorconfig" />
     </ItemGroup>
 
 </Project>
